DuPont DevSB/src/objects/Metadata__c.object
<CustomObject>
    <description>represents a metadata assets in salesforce.  current enities:
SObjects, fields, picklists, recordtype, pagelayout</description>
    <fields>
        <fullName>BusinessOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>keyUser of business responsible Owner</description>
        <label>Business Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>BusinessOwnerMetadata</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CRIM_Support__c</fullName>
        <description>Determine the level of CRIM supported functionality.</description>
        <inlineHelpText>Determine the level of CRIM supported functionality.</inlineHelpText>
        <label>CRIM Support</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Categorized</fullName>
                </value>
                <value>
                    <fullName>Inherited</fullName>
                </value>
                <value>
                    <fullName>System</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CascadeDelete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Cascade Delete from a Parent Deletion (This flag can also be used to Identify a Master Detail Relationship)</description>
        <inlineHelpText>Cascade Delete from a Parent Deletion (This flag can also be used to Identify a Master Detail Relationship)</inlineHelpText>
        <label>CascadeDelete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChildRelationshipName__c</fullName>
        <description>Name of the Child Relationship used only for fields of type &apos;reference&apos;</description>
        <inlineHelpText>Name of the Child Relationship used only for fields of type &apos;reference&apos;</inlineHelpText>
        <label>ChildRelationshipName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Control__c</fullName>
        <description>Category of field that describes what and how it used for.</description>
        <inlineHelpText>-Corp. Standard = Encourage use in BUs, owned by Data Model
-BU Select = Optional use in BUs, owned by Data Model 
-BU Specific = Used &amp; owned by individual BU
-System = User cannot modify
-Managed package = 3rd party app
-Contained=Limited use only</inlineHelpText>
        <label>Control</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Business Select</fullName>
                </value>
                <value>
                    <fullName>Business Specific</fullName>
                </value>
                <value>
                    <fullName>Contained</fullName>
                </value>
                <value>
                    <fullName>Core (All Orgs)</fullName>
                </value>
                <value>
                    <fullName>Core Extended (Org - Select)</fullName>
                </value>
                <value>
                    <fullName>Corporate Standard</fullName>
                </value>
                <value>
                    <fullName>Managed Package</fullName>
                </value>
                <value>
                    <fullName>Pilot</fullName>
                </value>
                <value>
                    <fullName>System</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CreatedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Asset CreatedBy</description>
        <label>Created By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CreatedMetadata</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CreatedDT__c</fullName>
        <description>asset CreatedDate</description>
        <label>Created</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of the metadata asset. This field is not updated automatically.</description>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FileName__c</fullName>
        <description>FileName from FileProperties.  ( Metadata API method: metadataList())</description>
        <inlineHelpText>FileName from FileProperties.  ( Metadata API method: metadataList())</inlineHelpText>
        <label>FileName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ForceId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Force.com Identifier (typically the 18 digit Id,  but not in all cases)</description>
        <externalId>true</externalId>
        <inlineHelpText>Force.com Identifier</inlineHelpText>
        <label>ForceId</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FullName__c</fullName>
        <description>force.com full name (external Id)</description>
        <externalId>true</externalId>
        <label>FullName</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Functionality__c</fullName>
        <description>Application or core feature code this metadata asset belongs to</description>
        <label>Functionality</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ITOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>IT Owner of metadata asset.</description>
        <label>IT Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Metadata</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsCustom__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Custom</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To flag if the entity is deleted.</description>
        <label>IsDeleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KeyPrefix__c</fullName>
        <label>KeyPrefix</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <description>Friendly name of metadata object.  Set as External Id for searching on.</description>
        <externalId>true</externalId>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Asset LastModifiedById</description>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>LastModifiedMetadata</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LastModifiedDT__c</fullName>
        <description>Asset LastModifiedDT</description>
        <label>Last Modified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated. Its is case sensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Lifecycle_Comments__c</fullName>
        <description>Recommendation regarding future lifecycle changes for this metadata asset</description>
        <label>Lifecycle Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migration_Notes_rft__c</fullName>
        <label>Migration Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Migration_Status__c</fullName>
        <label>Migration Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OK as is</fullName>
                </value>
                <value>
                    <fullName>Issue - Needs to be fixed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Namespace__c</fullName>
        <description>managed package namespace</description>
        <inlineHelpText>managed package namespace</inlineHelpText>
        <label>Namespace</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Parent</description>
        <inlineHelpText>Parent</inlineHelpText>
        <label>Parent</label>
        <referenceTo>Metadata__c</referenceTo>
        <relationshipLabel>Children (Metadata)</relationshipLabel>
        <relationshipName>Children</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ReferenceToMetadata__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Equiv Metadata Object</description>
        <label>ReferenceTo</label>
        <referenceTo>Metadata__c</referenceTo>
        <relationshipLabel>ReferenceTo (Metadata)</relationshipLabel>
        <relationshipName>ReferenceFrom</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ReferenceTo__c</fullName>
        <description>Object name a reference field references.  If a polymorphic key (IsNamePointing) then the value will be &apos;polymorphic;</description>
        <inlineHelpText>Object name a reference field references.  If a polymorphic key (IsNamePointing) then the value will be &apos;polymorphic;</inlineHelpText>
        <label>ReferenceTo Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RelationshipName__c</fullName>
        <description>Name of Relationship</description>
        <inlineHelpText>Name of Relationship</inlineHelpText>
        <label>RelationshipName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shared_By_BU__c</fullName>
        <description>Identifies businesses that share this Metadata</description>
        <label>Shared By BU</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CORP</fullName>
                </value>
                <value>
                    <fullName>CORP-BRAND</fullName>
                </value>
                <value>
                    <fullName>CORP-COB</fullName>
                </value>
                <value>
                    <fullName>CORP-CS</fullName>
                </value>
                <value>
                    <fullName>CORP-DIMC</fullName>
                </value>
                <value>
                    <fullName>CORP-IAL</fullName>
                </value>
                <value>
                    <fullName>CORP-IS</fullName>
                </value>
                <value>
                    <fullName>CORP-OTHER</fullName>
                </value>
                <value>
                    <fullName>CPC</fullName>
                </value>
                <value>
                    <fullName>DEC</fullName>
                </value>
                <value>
                    <fullName>DPM</fullName>
                </value>
                <value>
                    <fullName>DPM-DPP</fullName>
                </value>
                <value>
                    <fullName>DPM-DPP-KV</fullName>
                </value>
                <value>
                    <fullName>DPM-P&amp;IP</fullName>
                </value>
                <value>
                    <fullName>DPS</fullName>
                </value>
                <value>
                    <fullName>DPS-BI</fullName>
                </value>
                <value>
                    <fullName>DPS-DPT</fullName>
                </value>
                <value>
                    <fullName>DSS</fullName>
                </value>
                <value>
                    <fullName>IB</fullName>
                </value>
                <value>
                    <fullName>IB-CleanTech</fullName>
                </value>
                <value>
                    <fullName>IB-DTL</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
                <value>
                    <fullName>NH-QUAL</fullName>
                </value>
                <value>
                    <fullName>PHI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Size__c</fullName>
        <label>Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type of metadata. (SObject, Field, Picklist, Recordtype, Layout, etc...)</description>
        <label>Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Used_By_OwningBU__c</fullName>
        <description>Identifies the Business that is using this Metadata</description>
        <label>Used By OwningBU</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BU Shared</fullName>
                </value>
                <value>
                    <fullName>CORP BU Shared</fullName>
                </value>
                <value>
                    <fullName>CORP Only</fullName>
                </value>
                <value>
                    <fullName>CPC</fullName>
                </value>
                <value>
                    <fullName>DEC</fullName>
                </value>
                <value>
                    <fullName>Deleted</fullName>
                </value>
                <value>
                    <fullName>DPM</fullName>
                </value>
                <value>
                    <fullName>DPS</fullName>
                </value>
                <value>
                    <fullName>DSS</fullName>
                </value>
                <value>
                    <fullName>IB</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
                <value>
                    <fullName>Not Used by SpinCo</fullName>
                </value>
                <value>
                    <fullName>PHI</fullName>
                </value>
                <value>
                    <fullName>SpinCo Only</fullName>
                </value>
                <value>
                    <fullName>SpinCo Shared</fullName>
                </value>
                <value>
                    <fullName>System</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <description>Version</description>
        <inlineHelpText>Version</inlineHelpText>
        <label>Version</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>describe__c</fullName>
        <description>describe</description>
        <inlineHelpText>describe</inlineHelpText>
        <label>describe</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>fActiveStatus__c</fullName>
        <description>[Ok]:=data has been refreshed within 1 month 
[Stale]:=data has not been refreshed within 1 month
[Missing]:=parent object is atleast 2 days older (only Fields and Picklists)</description>
        <formula>IF( IsDeleted__c || Parent__r.IsDeleted__c, &quot;Deleted&quot;,
IF( NOT(ISBLANK(Parent__c)) &amp;&amp;  (Type__c==&quot;FIELD&quot; || Type__c==&quot;PICKLISTENTRY&quot;) &amp;&amp; DATEVALUE(LastModifiedDate)&lt;DATEVALUE(Parent__r.LastModifiedDate)-2,
&quot;Missing&quot;,
IF(DATEVALUE(LastModifiedDate)&gt;TODAY()-30 ,&quot;Ok&quot;,&quot;Stale&quot;)))</formula>
        <label>Active Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fEditLayout__c</fullName>
        <description>Demo inline Edit Layout, link can be used in view, related lists</description>
        <formula>If  (Type__c==&apos;LAYOUT&apos; ,
HYPERLINK(&apos;/layouteditor/layoutEditor.apexp?type=&apos;+MID(Parent__r.ForceId__c,1,15)+&apos;&amp;lid=&apos;+MID(ForceId__c,1,15)+&apos;&amp;retURL=%2F&apos;+Id ,&apos;edit&apos;,&apos;_blank&apos;), &apos;&apos;)</formula>
        <inlineHelpText>Demo inline Edit Layout, link can be used in view, related lists</inlineHelpText>
        <label>Edit Layout</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fSObject__c</fullName>
        <description>formula fields to show the name of the SObject related to this metadata asset</description>
        <formula>CASE(Type__c,&quot;SOBJECT&quot;, FullName__c,
&quot;FIELD&quot;,Parent__r.FullName__c,
&quot;RECORDTYPE&quot;,Parent__r.FullName__c,
&quot;LAYOUT&quot;,Parent__r.FullName__c,
&quot;VALIDATIONRULE&quot;,Parent__r.FullName__c,
&quot;WORKFLOWRULE&quot;,Parent__r.FullName__c,
&quot;PICKLISTENTRY&quot;,Parent__r.Parent__r.FullName__c, null)</formula>
        <label>SObject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rtfAdminNotes__c</fullName>
        <description>Notes about this field such as dependencies, suggestions, critical requirements.  just a general catch all for data that is not already designated a field.</description>
        <inlineHelpText>Notes about this field such as dependencies, suggestions, critical requirements.  A general catch all for data that is not already designated a field on this object.</inlineHelpText>
        <label>Administrator Notes (rtf)</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>subtype__c</fullName>
        <description>general subtype (datatype for fields)</description>
        <label>subtype</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Metadata</label>
    <listViews>
        <fullName>Account_ChildRelations</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>subtype__c</columns>
        <columns>ReferenceTo__c</columns>
        <columns>ReferenceToMetadata__c</columns>
        <columns>RelationshipName__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Field</value>
        </filters>
        <filters>
            <field>ReferenceTo__c</field>
            <operation>equals</operation>
            <value>Account</value>
        </filters>
        <label>Account ChildRelations</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllDeveloperAssets</fullName>
        <columns>NAME</columns>
        <columns>Functionality__c</columns>
        <columns>Used_By_OwningBU__c</columns>
        <columns>Control__c</columns>
        <columns>Lifecycle_Comments__c</columns>
        <columns>Type__c</columns>
        <columns>subtype__c</columns>
        <columns>fActiveStatus__c</columns>
        <columns>Namespace__c</columns>
        <columns>LastModifiedBy__c</columns>
        <columns>LastModifiedDT__c</columns>
        <columns>Size__c</columns>
        <columns>FullName__c</columns>
        <columns>ForceId__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Metadata__c.Logic</value>
        </filters>
        <filters>
            <field>IsDeleted__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Developer Assets</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllDeveloperAssetsCORE</fullName>
        <columns>NAME</columns>
        <columns>Functionality__c</columns>
        <columns>Used_By_OwningBU__c</columns>
        <columns>Control__c</columns>
        <columns>Lifecycle_Comments__c</columns>
        <columns>Type__c</columns>
        <columns>subtype__c</columns>
        <columns>fActiveStatus__c</columns>
        <columns>Namespace__c</columns>
        <columns>LastModifiedBy__c</columns>
        <columns>LastModifiedDT__c</columns>
        <columns>Size__c</columns>
        <columns>FullName__c</columns>
        <columns>ForceId__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Metadata__c.Logic</value>
        </filters>
        <filters>
            <field>IsDeleted__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Developer Assets - CORE</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Blank_Used_By</fullName>
        <columns>NAME</columns>
        <columns>FullName__c</columns>
        <columns>Used_By_OwningBU__c</columns>
        <columns>fSObject__c</columns>
        <columns>Functionality__c</columns>
        <columns>IsDeleted__c</columns>
        <columns>Type__c</columns>
        <columns>fActiveStatus__c</columns>
        <columns>subtype__c</columns>
        <columns>Control__c</columns>
        <columns>BusinessOwner__c</columns>
        <columns>ITOwner__c</columns>
        <columns>LastModifiedDT__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Used_By_OwningBU__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Metadata__c.GeneralAsset</value>
        </filters>
        <label>All Blank Used By</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Business_Free_Fields</fullName>
        <columns>NAME</columns>
        <columns>Label__c</columns>
        <columns>Type__c</columns>
        <columns>Parent__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Control__c</field>
            <operation>equals</operation>
            <value>Business Free</value>
        </filters>
        <label>All Business Free Fields</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Buttons_Links</fullName>
        <columns>NAME</columns>
        <columns>fSObject__c</columns>
        <columns>Used_By_OwningBU__c</columns>
        <columns>fActiveStatus__c</columns>
        <columns>Parent__c</columns>
        <columns>Control__c</columns>
        <columns>BusinessOwner__c</columns>
        <columns>ITOwner__c</columns>
        <columns>ReferenceToMetadata__c</columns>
        <columns>ReferenceTo__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Weblink</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Metadata__c.GeneralAsset</value>
        </filters>
        <label>All Buttons &amp; Links</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Corporate_Fields</fullName>
        <columns>NAME</columns>
        <columns>Label__c</columns>
        <columns>Type__c</columns>
        <columns>Parent__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Control__c</field>
            <operation>equals</operation>
            <value>Corporate Standard</value>
        </filters>
        <label>All Corporate Standard Fields</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Fields</fullName>
        <columns>NAME</columns>
        <columns>FullName__c</columns>
        <columns>Description__c</columns>
        <columns>Label__c</columns>
        <columns>Type__c</columns>
        <columns>Size__c</columns>
        <columns>subtype__c</columns>
        <columns>Control__c</columns>
        <columns>IsCustom__c</columns>
        <columns>Parent__c</columns>
        <columns>ForceId__c</columns>
        <columns>fSObject__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Metadata__c.Field</value>
        </filters>
        <label>All Fields</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Fields_LMD</fullName>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LastModifiedDT__c</columns>
        <columns>Used_By_OwningBU__c</columns>
        <columns>FullName__c</columns>
        <columns>Description__c</columns>
        <columns>Label__c</columns>
        <columns>Type__c</columns>
        <columns>Size__c</columns>
        <columns>subtype__c</columns>
        <columns>Control__c</columns>
        <columns>IsCustom__c</columns>
        <columns>Parent__c</columns>
        <columns>ForceId__c</columns>
        <columns>fSObject__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Metadata__c.Field</value>
        </filters>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>greaterThan</operation>
            <value>6/23/2014 12:00 AM</value>
        </filters>
        <label>All Fields - LMD</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_General_Assets_Folders</fullName>
        <columns>NAME</columns>
        <columns>FullName__c</columns>
        <columns>ForceId__c</columns>
        <columns>Used_By_OwningBU__c</columns>
        <columns>Type__c</columns>
        <columns>fActiveStatus__c</columns>
        <columns>subtype__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>fActiveStatus__c</field>
            <operation>notEqual</operation>
            <value>Deleted</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Metadata__c.GeneralAsset</value>
        </filters>
        <filters>
            <field>FullName__c</field>
            <operation>contains</operation>
            <value>Document</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>DocumentFolder</value>
        </filters>
        <label>All General Assets - Folders</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Picklist_Fields_For_Update</fullName>
        <columns>NAME</columns>
        <columns>FullName__c</columns>
        <columns>Label__c</columns>
        <columns>Type__c</columns>
        <columns>Parent__c</columns>
        <columns>Used_By_OwningBU__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Metadata__c.Picklist</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>startsWith</operation>
            <value>PICKLIST</value>
        </filters>
        <filters>
            <field>Used_By_OwningBU__c</field>
            <operation>equals</operation>
        </filters>
        <label>All Picklist Fields For Update</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Picklist_Fields_pending_Control</fullName>
        <columns>NAME</columns>
        <columns>Label__c</columns>
        <columns>Type__c</columns>
        <columns>Parent__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Control__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>subtype__c</field>
            <operation>equals</operation>
            <value>PICKLIST</value>
        </filters>
        <label>All Picklist Fields pending Control</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_RecordTypes</fullName>
        <columns>NAME</columns>
        <columns>fSObject__c</columns>
        <columns>Used_By_OwningBU__c</columns>
        <columns>fActiveStatus__c</columns>
        <columns>Control__c</columns>
        <columns>BusinessOwner__c</columns>
        <columns>ITOwner__c</columns>
        <columns>ReferenceToMetadata__c</columns>
        <columns>ReferenceTo__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>RECORDTYPE</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Metadata__c.Layout</value>
        </filters>
        <label>All RecordTypes</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_ReportType_Blank</fullName>
        <columns>NAME</columns>
        <columns>fSObject__c</columns>
        <columns>Used_By_OwningBU__c</columns>
        <columns>fActiveStatus__c</columns>
        <columns>CreatedBy__c</columns>
        <columns>Parent__c</columns>
        <columns>Control__c</columns>
        <columns>BusinessOwner__c</columns>
        <columns>ITOwner__c</columns>
        <columns>ReferenceToMetadata__c</columns>
        <columns>ReferenceTo__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>RecordType</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Metadata__c.Layout</value>
        </filters>
        <filters>
            <field>Used_By_OwningBU__c</field>
            <operation>equals</operation>
        </filters>
        <label>All ReportType - Blank</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Rich_Text_Fields</fullName>
        <columns>NAME</columns>
        <columns>FullName__c</columns>
        <columns>Description__c</columns>
        <columns>Used_By_OwningBU__c</columns>
        <columns>Label__c</columns>
        <columns>Type__c</columns>
        <columns>Size__c</columns>
        <columns>subtype__c</columns>
        <columns>Control__c</columns>
        <columns>IsCustom__c</columns>
        <columns>Parent__c</columns>
        <columns>ForceId__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Metadata__c.Field</value>
        </filters>
        <filters>
            <field>subtype__c</field>
            <operation>equals</operation>
            <value>Rich Text</value>
        </filters>
        <label>All Rich Text Fields</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>API Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Metadata</pluralLabel>
    <recordTypes>
        <fullName>Field</fullName>
        <active>true</active>
        <description>describe Field</description>
        <label>Field</label>
    </recordTypes>
    <recordTypes>
        <fullName>GeneralAsset</fullName>
        <active>true</active>
        <description>General Asset is default type for asset data returned via the Metadata API call listMetadata()</description>
        <label>General Asset</label>
    </recordTypes>
    <recordTypes>
        <fullName>Layout</fullName>
        <active>true</active>
        <description>Represents a Page Layout</description>
        <label>Layout</label>
    </recordTypes>
    <recordTypes>
        <fullName>Logic</fullName>
        <active>true</active>
        <description>Classes, triggers, pages, components</description>
        <label>Logic</label>
    </recordTypes>
    <recordTypes>
        <fullName>Picklist</fullName>
        <active>true</active>
        <description>Picklist</description>
        <label>Picklist</label>
    </recordTypes>
    <recordTypes>
        <fullName>SObject</fullName>
        <active>true</active>
        <description>SObject</description>
        <label>SObject</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>